# purroxy2

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  PRD.md  README.md  electron-builder.yml  mcp-server.mjs  package-lock.json  package.json  user-stories.md  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  copy-secrets.yml  deploy-backend.yml  test.yml
backend/: package-lock.json  package.json  schema.sql  vitest.config.ts  wrangler.toml
backend/src/: index.ts
backend/src/lib/: auth.ts  email.ts  github.ts  stripe.ts
backend/tests/: index.test.ts
backend/tests/lib/: auth.test.ts  email.test.ts  github.test.ts  stripe.test.ts
backend/tests/mocks/: kv-mock.ts
core/browser/: action-utils.ts  browser-engine.ts  playwright-engine.ts  types.ts
crates/host/: Cargo.toml
crates/host/src/: main.rs
crates/reference-capability/: Cargo.toml
crates/reference-capability/src/: lib.rs
crates/reference-capability/wit/: world.wit
crates/replay/: Cargo.toml
crates/replay/src/: engine.rs  lib.rs  main.rs  run_record.rs
crates/replay/tests/: live_replay.rs
crates/replay/tests/fixtures/click-link/: manifest.json
crates/replay/tests/fixtures/repair-click/: manifest.json
crates/security/: Cargo.toml
crates/security/src/: keychain.rs  lib.rs  lock.rs  signing.rs  vault.rs
docs/: CNAME  guide.html  index.html  privacy.html  terms.html
electron/: account.ts  ai.ts  browser-view.ts  capabilities.ts  executor.ts  healer.ts  ipc.ts  main.ts  mcp-api.ts  preload.ts  recorder.ts  vault.ts
scripts/: publish-npm.sh  spike-electron-replay.mjs  spike2-patchright-chrome.mjs
src/: App.tsx  global.d.ts
src/components/: Sidebar.tsx
src/views/: Builder.tsx  Community.tsx  Home.tsx  Library.tsx  Settings.tsx  Vault.tsx
tests/core/: playwright-engine.test.ts
tests/electron/: account.test.ts  ai.test.ts  app-lock.test.ts  capabilities.test.ts  crypto.test.ts  executor.test.ts  healer.test.ts  ipc.test.ts  mcp-api.test.ts  sites.test.ts  store.test.ts  vault.test.ts
tests/factories/: account-factory.ts  action-factory.ts  capability-factory.ts  site-factory.ts
tests/frontend/stores/: settings.test.ts
tests/frontend/views/: Builder.test.tsx  Community.test.tsx  Library.test.tsx  Settings.test.tsx  Vault.test.tsx
tests/mocks/: d1-mock.ts  electron-store-mock.ts  stripe-mock.ts
tests/setup/: dom-setup.ts  electron-mocks.ts  fetch-mock.ts  playwright-mocks.ts
wit/: capability.wit
