[package]
name = "security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Phase 5: vault, sessions, app lock, bundle signing key.
#
# - keychain: OS-native key/secret storage (Keychain on macOS,
#   DPAPI-protected on Windows, libsecret on Linux) via the
#   `keyring` crate.
# - signing: Ed25519 keypair, sign/verify for capability bundles.
#   Public key embedded so verification works without out-of-band
#   key distribution (PRD §10).
# - vault: encrypted JSON store for sensitive non-credential data
#   (PRD §7.6, §9.2). Encryption key lives in keychain; values
#   never appear in WASM components or AI requests.
# - lock: PIN-based app lock with argon2id hashing and inactivity
#   timeout state machine (PRD §7.7, §9.6).

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
rand = "0.8"
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["derive"] }
